<resources>
    <string name="app_name">BetterCounter</string>
    <string name="name_cant_be_blank">Give the counter a name</string>
    <string name="already_exists">A counter with this name already exists</string>
    <string name="name">Name</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="never">Never</string>
    <string name="add_counter">Add counter</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="counter_type_standard">Standard</string>
    <string name="counter_type_dynamic">Dynamic (Formula)</string>
    <string name="formula_hint">e.g. sum(Category) + CounterA - CounterB</string>
    <string name="edit_counter">Edit counter</string>
    <string name="delete">Delete</string>
    <string name="delete_or_reset">Delete/Reset</string>
    <string name="interval_hour">Hourly</string>
    <string name="interval_day">Daily</string>
    <string name="interval_week">Weekly</string>
    <string name="interval_month">Monthly</string>
    <string name="interval_year">Yearly</string>
    <string name="interval_timer">mytimer</string>
    <string name="interval_lifetime">Lifetime</string>
    <string name="time_ago_dhm">%1$dd %2$dh %3$dm ago</string>
    <string name="time_ago_hm">%1$dh %2$dm ago</string>
    <string name="time_ago_m">%1$dm ago</string>
    <string name="time_in_dhm">In %1$dd %2$dh %3$dm</string>
    <string name="time_in_hm">In %1$dh %2$dm</string>
    <string name="time_in_m">In %1$dm</string>
    <string name="just_now">Just now</string>
    <string name="stats_averages">Avg: %1$s, lifetime: %2$s</string>
    <string name="stats_averages_multiline">Avg: %1$s\nLifetime: %2$s</string>
    <string name="stats_average_per_hour">%1$.2f times/hour</string>
    <string name="stats_average_every_hours">every %1$.2f hours</string>
    <string name="stats_average_per_day">%1$.2f times/day</string>
    <string name="stats_average_every_days">every %1$.2f days</string>
    <string name="stats_average_n_a">N/A</string>
    <string name="no_data">There are no entries in this period</string>
    <string name="tutorial_pickdate">Long press to pick the date</string>
    <string name="tutorial_change_graph_interval">Tap to change the time interval</string>
    <string name="tutorial_drag">Long press and drag to reorder</string>
    <string name="export_csv">Export data</string>
    <string name="import_csv">Import data</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="clear_all_data_confirm_title">Clear all data</string>
    <string name="clear_all_data_confirm_message">Are you sure you want to clear all counter data? This will reset all counters to 0 but keep their settings and goals.</string>
    <string name="clear">Clear</string>
    <string name="all_data_cleared">All counter data cleared</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="exported_n">Exported %1$d/%2$d counters</string>
    <string name="imported_n">Imported %1$d counters</string>
    <string name="import_error">Error: invalid file format</string>
    <string name="delete_confirmation">Delete or reset all entries for this counter?</string>
    <string name="decreased_entry">Decreased \'%1$s\'</string>
    <string name="undo">Undo</string>
    <string name="reset">Reset but keep</string>
    <plurals name="chart_title">
        <item quantity="one">%1$s (%2$d time)</item>
        <item quantity="other">%1$s (%2$d times)</item>
    </plurals>
    <string name="fake_example_title">Go jogging</string>
    <string name="app_widget_description">Add a counter to your home screen</string>
    <string name="app_widget_category_description">Display counters from a category as a list</string>
    <string name="no_counters">No counters exist: Create some first</string>
    <string name="no_counters_in_category">No counters in this category</string>
    <string name="select_category">Select a category</string>
    <string name="fake_category_title">My Category</string>
    <string name="fake_counter_1">Counter A</string>
    <string name="fake_counter_2">Counter B</string>
    <string name="fake_counter_3">Counter C</string>
    <string name="color_hint">Color %1$d</string>
    <string name="interval">Interval to display</string>
    <string name="goal">Goal</string>
    <string name="step">Step</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="search_counters">搜索计数器...</string>
    <string name="no_search_results">没有找到匹配的计数器</string>
    <string name="about">关于</string>
    <string name="version_info">版本信息\n版本: %1$s\nGit Commit: %2$s</string>
</resources>
